--- a/react-hooks/src/index.css
+++ b/react-hooks/src/index.css
@@ -12,3 +12,13 @@
   line-height: 1.5;
  
 }
+
+@keyframes gradient {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+.animate-gradient {
+  background-size: 200% 200%;
+  animation: gradient 5s ease infinite;
+}
